--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,5 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <style name="Base.Theme.EcommerceWithFirebase" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:colorPrimary">@color/praimary_color</item>
@@ -8,14 +8,16 @@
         <item name="android:navigationBarColor">@color/white</item>
     </style>
     <style name="Theme.EcommerceWithFirebase" parent="Base.Theme.EcommerceWithFirebase" />
-    <style name="MainActvityTheme" parent="Theme.EcommerceWithFirebase">
+    <style name="MainActvityTheme" parent="Theme.SplashScreen">
         <item name="android:statusBarColor">@color/praimary_color</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:navigationBarColor">@color/praimary_color</item>
-        <item name="android:windowLightNavigationBar" tools:ignore="NewApi">true</item>
+        <item name="android:windowLightNavigationBar">true</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:windowBackground">@drawable/launch_backgroud</item>
-
+        <item name="windowSplashScreenBackground">@color/praimary_color</item>
+        <item name="postSplashScreenTheme">@style/Theme.EcommerceWithFirebase</item>
 
     </style>
+
+
 </resources>
