--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -14,6 +14,7 @@
         <item name="android:navigationBarColor">@color/praimary_color</item>
         <item name="android:windowLightNavigationBar">true</item>
         <item name="windowNoTitle">true</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="windowSplashScreenBackground">@color/praimary_color</item>
         <item name="postSplashScreenTheme">@style/Theme.EcommerceWithFirebase</item>
 
